<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="120dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="30dp"
        android:text="@string/toreg"/>
    <ImageButton
        android:id="@+id/back"
        android:layout_width="78dp"
        android:layout_height="70dp"
        android:contentDescription="back"
        android:background="@drawable/back"
        android:onClick="toMain2"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="78dp"
        android:text="@string/title1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:layout_width="411dp"
        android:layout_marginTop="171dp"
        android:layout_height="519dp"
        android:background="@color/background">
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="34dp"
            android:layout_height="70dp"
            android:background="@drawable/whiteblock2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/howmany"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <SeekBar
                android:layout_width="340dp"
                android:layout_height="5dp"
                android:layout_marginTop="35dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="3dp"
                android:text="@string/ot"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="269dp"
                android:text="@string/for100"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/whiteblock">
            <EditText
                android:layout_width="122dp"
                android:layout_height="35dp"
                android:layout_marginLeft="22dp"
                android:textSize="10sp"
                android:hint="@string/entersrok"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="179dp"
            android:text="@string/res"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:onClick="toThree"/>
        <RelativeLayout
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="279dp"
            android:background="@drawable/whiteblock">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/monthpay"
                />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>