<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreeActivity">
    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="78dp"
        android:text="@string/title1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:layout_width="411dp"
        android:layout_marginTop="171dp"
        android:layout_height="519dp"
        android:background="@color/background">
        <RelativeLayout
            android:layout_width="268dp"
            android:layout_marginTop="34dp"
            android:layout_marginLeft="72dp"
            android:layout_height="30dp"
            android:background="@drawable/whiteblock2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sum"
                android:textColor="@color/black"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/whiteblock">
            <TextView
                android:layout_width="122dp"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="40dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/srok"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="279dp"
            android:background="@drawable/whiteblock">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/monthpay"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btn"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="399dp"
            android:text="@string/regist"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:onClick="toMain"/>
    </RelativeLayout>

</RelativeLayout>